correcciones y pruebas