@@ -93,6 +93,21 @@ https://maven.apache.org/xsd/maven-4.0.0.xsd">
                 <mainClass>com.luisdbb.tarea3AD2024base.Tarea3Ad2024baseApplication</mainClass>
             </configuration>
         </plugin>
+        
+        <plugin>
+    		<groupId>org.openjfx</groupId>
+    		<artifactId>javafx-maven-plugin</artifactId>
+    		<version>0.0.8</version>
+    		<configuration>
+        		<mainClass>com.luisdbb.tarea3AD2024base.Tarea3Ad2024baseApplication</mainClass>
+        	<options>
+            <option>--add-opens</option>
+            <option>java.base/java.time=ALL-UNNAMED</option>
+            <option>--add-opens</option>
+            <option>java.base/java.lang=ALL-UNNAMED</option>
+        </options>
+    </configuration>
+</plugin>
 
     </plugins>
 </build>
